instance validation status bar icon
Also concretely types instance validation reports and some minor fixes.

refs #410

Change-Id: I192165581570a8e1f9c37a6be5b3d34dfda5e75f

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -531,5 +531,14 @@
             pattern="org.eclipse.ui.console/org.eclipse.ui.console.ConsoleView">
       </activityPatternBinding>
    </extension>
-
+   <extension
+         point="org.eclipse.ui.views">
+      <view
+            name="Progress View"
+            icon="icons/pview.gif"
+            category="org.eclipse.ui"
+            class="org.eclipse.ui.ExtensionFactory:progressView"
+            id="org.eclipse.ui.views.ProgressView">
+      </view>
+   </extension>
 </plugin>
