--- a/common/plugins/eu.esdihumboldt.hale.common.instancevalidator/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.instancevalidator/plugin.xml
@@ -34,5 +34,15 @@
             validator="eu.esdihumboldt.hale.common.instancevalidator.validators.ChoiceFlagValidator">
       </groupPropertyConstraintValidator>
    </extension>
-
+   <extension
+         point="eu.esdihumboldt.hale.report">
+      <messageDefinition
+            class="eu.esdihumboldt.hale.common.instancevalidator.report.impl.InstanceValidationMessageDefinition"
+            id="eu.esdihumboldt.hale.common.instancevalidator">
+      </messageDefinition>
+      <reportDefinition
+            class="eu.esdihumboldt.hale.common.instancevalidator.report.impl.InstanceValidationReportDefinition"
+            id="eu.esdihumboldt.hale.common.instancevalidator">
+      </reportDefinition>
+   </extension>
 </plugin>
