--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.report/build.properties
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.report/build.properties
@@ -3,7 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               OSGI-INF/l10n/,\
                icons/,\
-               OSGI-INF/,\
-               swing2swt.jar
+               OSGI-INF/
