added JDBC configuration extension point
Currently offering the possibility to configure
connections created thorugh the JDBCConnection
helper class.

Change-Id: Ic31294b311da388f89ca1365a38d2870ed402572
Reviewed-on: http://gerrit.esdi-community.eu/1256
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.jdbc/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.jdbc/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="eu.esdihumboldt.hale.io.jdbc.config" name="JDBC Configuration Extension" schema="schema/eu.esdihumboldt.hale.io.jdbc.config.exsd"/>
    <extension
          point="eu.esdihumboldt.hale.io.provider">
       <provider
