registered postgis geometry type
Change-Id: I3bde395b504befdf2b3343cf23db26a6857c36f3
Reviewed-on: http://gerrit.esdi-community.eu/1260
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.jdbc.postgresql/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.jdbc.postgresql/plugin.xml
@@ -8,6 +8,12 @@
             id="eu.esdihumboldt.hale.io.jdbc.postgresql.postgis"
             type="org.postgresql.PGConnection">
       </connection>
+      <geometrytype
+            connection="org.postgresql.PGConnection"
+            id="eu.esdihumboldt.hale.io.jdbc.postgresql.postgis.geometry"
+            name="geometry"
+            type="com.vividsolutions.jts.geom.Geometry">
+      </geometrytype>
    </extension>
 
 </plugin>
