added first very simple version of JDBC instance writer
Change-Id: I5ac9d24f390a927a069bfac8e1e2434c699b0ab9
Reviewed-on: http://gerrit.esdi-community.eu/1266
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/io/plugins/eu.esdihumboldt.hale.io.jdbc.ui/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.jdbc.ui/plugin.xml
@@ -9,6 +9,9 @@
          <provider
                ref="eu.esdihumboldt.hale.io.jdbc.schema.reader">
          </provider>
+         <provider
+               ref="eu.esdihumboldt.hale.io.jdbc.instance.writer">
+         </provider>
       </configPage>
    </extension>
 
