--- a/io/plugins/eu.esdihumboldt.hale.io.jdbc/plugin.xml
+++ b/io/plugins/eu.esdihumboldt.hale.io.jdbc/plugin.xml
@@ -12,6 +12,14 @@
                ref="eu.esdihumboldt.hale.io.jdbc">
          </contentType>
       </provider>
+      <provider
+            class="eu.esdihumboldt.hale.io.jdbc.JDBCInstanceWriter"
+            id="eu.esdihumboldt.hale.io.jdbc.instance.writer"
+            name="Database (JDBC)">
+         <contentType
+               ref="eu.esdihumboldt.hale.io.jdbc">
+         </contentType>
+      </provider>
    </extension>
    <extension
          point="org.eclipse.core.contenttype.contentTypes">
