instance validation toggle and ui for report
refs #410

Change-Id: Iba428c6395146161e98bd41ea91016e13d8cfcdb
Reviewed-on: http://gerrit.esdi-community.eu/1276
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.instancevalidation/.project
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.instancevalidation/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>eu.esdihumboldt.hale.ui.status.validation</name>
+	<name>eu.esdihumboldt.hale.ui.instancevalidation</name>
 	<comment></comment>
 	<projects>
 	</projects>
