--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.report/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.report/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="eu.esdihumboldt.hale.ui.views.report.detailpage" name="Custom report detail page" schema="schema/eu.esdihumboldt.hale.ui.views.report.detailpage.exsd"/>
    <extension
          point="org.eclipse.ui.views">
       <view
