--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -376,6 +376,10 @@
                   commandId="eu.esdihumboldt.hale.ui.instance.toggle_transformation"
                   style="toggle">
             </command>
+            <command
+                  commandId="eu.esdihumboldt.hale.ui.instancevalidation.status.toggle_validation"
+                  style="toggle">
+            </command>
          </toolbar>
          <toolbar
                id="eu.esdihumboldt.hale.ui.edit"
