--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -73,6 +73,24 @@
                </parameter>
             </validator>
          </functionParameter>
+         <functionParameter
+               description="Specifies if for the structural rename it is allowed to do copying independent of property namespaces."
+               label="Allow ignore namespace"
+               maxOccurrence="1"
+               minOccurrence="0"
+               name="ignoreNamespaces">
+            <validator
+                  class="eu.esdihumboldt.hale.common.align.extension.function.validator.EnumerationValidator">
+               <parameter
+                     name="value"
+                     value="true">
+               </parameter>
+               <parameter
+                     name="value"
+                     value="false">
+               </parameter>
+            </validator>
+         </functionParameter>
       </propertyFunction>
       <propertyFunction
             category="eu.esdihumboldt.hale.align.general"
