--- a/ui/plugins/eu.esdihumboldt.hale.ui.common.definition.editors/.project
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.common.definition.editors/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>eu.esdihumboldt.hale.ui.common.editors</name>
+	<name>eu.esdihumboldt.hale.ui.common.definition.editors</name>
 	<comment></comment>
 	<projects>
 	</projects>
