--- a/ui/plugins/eu.esdihumboldt.hale.ui.common.definition.editors/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.common.definition.editors/plugin.xml
@@ -4,7 +4,7 @@
    <extension
          point="org.eclipse.ui.services">
       <serviceFactory
-            factoryClass="eu.esdihumboldt.hale.ui.common.editors.ServiceFactory">
+            factoryClass="eu.esdihumboldt.hale.ui.common.definition.editors.ServiceFactory">
          <service
                serviceClass="eu.esdihumboldt.hale.ui.common.definition.AttributeEditorFactory">
          </service>
