added boolean parameter editor for ignoreNamespaces
Change-Id: I1dc5fe75358c591b8858c8fa95e5f5cbdca1c98c

--- a/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
@@ -77,5 +77,12 @@
                name="additional_property">
          </parameter>
       </typeParameterPage>
+      <propertyParameterEditor
+            class="eu.esdihumboldt.hale.ui.common.editors.BooleanEditorFactory"
+            function="eu.esdihumboldt.hale.align.rename"
+            id="eu.esdihumboldt.hale.align.rename.ignoreNamespaces.editor"
+            parameter="ignoreNamespaces"
+            priority="0">
+      </propertyParameterEditor>
    </extension>
 </plugin>
