replaced original map view with custom view
The custom view provides support for the contextual help.
Applying the new view requires resetting the perspective
or clearing the workspace.

refs #437

Change-Id: I47e4cbb5202fa7a42ae822e990efc6ec96e9e8d1
Reviewed-on: http://gerrit.esdi-community.eu/1310
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/plugin.xml
+++ b/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/plugin.xml
@@ -17,5 +17,11 @@
             primary="false">
       </toc>
    </extension>
+   <extension
+         point="org.eclipse.help.contexts">
+      <contexts
+            file="contexts.xml">
+      </contexts>
+   </extension>
 
 </plugin>
