--- a/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/build.properties
+++ b/ext/styledmap/eu.esdihumboldt.hale.doc.user.views.styledmap/build.properties
@@ -4,4 +4,5 @@ bin.includes = META-INF/,\
                html/,\
                toc.views.xml,\
                toc.gettingstarted.xml,\
-               toc.tasks_data.xml
+               toc.tasks_data.xml,\
+               contexts.xml
