first version of PopulationService
refs #411
refs #401

Change-Id: I0946b711d9134daa81d7c7f4e62478e34ca7edb6

--- a/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
@@ -383,6 +383,9 @@
          <service
                serviceClass="eu.esdihumboldt.hale.ui.geometry.service.GeometrySchemaService">
          </service>
+         <service
+               serviceClass="eu.esdihumboldt.hale.ui.common.service.population.PopulationService">
+         </service>
       </serviceFactory>
       <sourceProvider
             provider="eu.esdihumboldt.hale.ui.service.schema.internal.SchemaServiceSource">
