--- a/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui/plugin.xml
@@ -619,6 +619,36 @@
                </with>
             </visibleWhen>
          </command>
+         <menu
+               label="Replace with">
+            <visibleWhen
+                  checkEnabled="false">
+               <with
+                     variable="selection">
+                  <and>
+                     <count
+                           value="1">
+                     </count>
+                     <iterate
+                           ifEmpty="false"
+                           operator="and">
+                        <and>
+                           <instanceof
+                                 value="eu.esdihumboldt.hale.common.align.model.Cell">
+                           </instanceof>
+                           <test
+                                 property="eu.esdihumboldt.hale.ui.service.align.cell.allow_remove">
+                           </test>
+                        </and>
+                     </iterate>
+                  </and>
+               </with>
+            </visibleWhen>
+            <dynamic
+                  class="eu.esdihumboldt.hale.ui.function.contribution.ReplaceFunctionWizardContribution"
+                  id="eu.esdihumboldt.hale.ui.cell.replace">
+            </dynamic>
+         </menu>
          <command
                commandId="eu.esdihumboldt.hale.ui.edit.modify"
                label="Edit..."
