added transformation tree hooks contribution to menu
refs #458

Change-Id: Ibda5ed4a740ea3421936896c6d6f5b65946db602

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -304,6 +304,20 @@
                   label="Validate transformed instances"
                   style="toggle">
             </command>
+            <separator
+                  name="transformation.separator1"
+                  visible="true">
+            </separator>
+            <menu
+                  label="Hooks">
+               <menu
+                     label="Transformation tree">
+                  <dynamic
+                        class="eu.esdihumboldt.hale.ui.cst.contribution.TransformationTreeHooksContribution"
+                        id="cst.hooks.ttree">
+                  </dynamic>
+               </menu>
+            </menu>
          </menu>
          <menu
                id="window"
