custom images for metadatas through extensionpoint
Change-Id: I96dc0c753886f861c870fbe2e8ef6359b16637de
Reviewed-on: http://gerrit.esdi-community.eu/1463
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/common/plugins/eu.esdihumboldt.hale.common.instance/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.instance/plugin.xml
@@ -25,6 +25,7 @@
       <metadata
             description="Uniquely identifies an instance"
             generator="eu.esdihumboldt.hale.common.instance.extension.metadata.MetadataIdGenerator"
+            icon="icons/pin_editor.gif"
             key="ID"
             label="Identifier">
       </metadata>
