adapted zip archive export and import
introduced abstract project reader and writer
xml schema updater adapts all imports and include xml schemas
refs #420

Change-Id: Ia557d9b627ee9e5969eba64153dd9f9237093e6b

--- a/common/plugins/eu.esdihumboldt.hale.common.core/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.core/plugin.xml
@@ -76,6 +76,14 @@
                ref="eu.esdihumboldt.hale.io.project.hale25.zip">
          </contentType>
       </provider>
+      <provider
+            class="eu.esdihumboldt.hale.common.core.io.project.impl.ArchiveProjectReader"
+            id="eu.esdihumboldt.hale.io.project.hale25.zip.reader"
+            name="HALE project archive">
+         <contentType
+               ref="eu.esdihumboldt.hale.io.project.hale25.zip">
+         </contentType>
+      </provider>
    </extension>
    <extension
          point="eu.esdihumboldt.hale.report">
