--- a/common/plugins/eu.esdihumboldt.hale.common.instancevalidator/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.instancevalidator/plugin.xml
@@ -33,6 +33,11 @@
             id="eu.esdihumboldt.hale.common.instancevalidator.choice"
             validator="eu.esdihumboldt.hale.common.instancevalidator.validators.ChoiceFlagValidator">
       </groupPropertyConstraintValidator>
+      <propertyConstraintValidator
+            constraint="eu.esdihumboldt.hale.common.schema.model.constraint.property.Unique"
+            id="eu.esdihumboldt.hale.common.instancevalidator.unique"
+            validator="eu.esdihumboldt.hale.common.instancevalidator.validators.UniqueValidator">
+      </propertyConstraintValidator>
    </extension>
    <extension
          point="eu.esdihumboldt.hale.report">
