--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -296,6 +296,10 @@
                label="Transformation"
                mnemonic="T">
             <command
+                  commandId="eu.esdihumboldt.hale.ui.transformation"
+                  style="push">
+            </command>
+            <command
                   commandId="eu.esdihumboldt.hale.ui.instance.toggle_transformation"
                   style="toggle">
             </command>
