--- a/legacy/plugins/eu.esdihumboldt.hale.ui.views.tasks/.project
+++ b/legacy/plugins/eu.esdihumboldt.hale.ui.views.tasks/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>eu.esdihumboldt.hale.ui.views.tasks</name>
+	<name>eu.esdihumboldt.hale.ui.views.tasks.legacy</name>
 	<comment></comment>
 	<projects>
 	</projects>
