added first version of sequential id parameter page
refs #472

Change-Id: I2a9dd072f253f8420e2b7d1ae599436f292cba12
Reviewed-on: http://gerrit.esdi-community.eu/1438
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.functions.numeric/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.functions.numeric/plugin.xml
@@ -11,6 +11,21 @@
                name="expression">
          </parameter>
       </propertyParameterPage>
+      <propertyParameterPage
+            class="eu.esdihumboldt.hale.ui.functions.numeric.SequentialIDParameterPage"
+            function="eu.esdihumboldt.cst.functions.numeric.sequentialid"
+            id="eu.esdihumboldt.hale.ui.functions.numeric.sequentialid"
+            order="0">
+         <parameter
+               name="sequence">
+         </parameter>
+         <parameter
+               name="prefix">
+         </parameter>
+         <parameter
+               name="suffix">
+         </parameter>
+      </propertyParameterPage>
    </extension>
 
 </plugin>
