added target property condition for InspireIdentifier
...function.

refs #477

Change-Id: I7b93349091aedbb61858e7adf9a7bf9d74fc6661

--- a/cst/plugins/eu.esdihumboldt.cst.functions.inspire/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.inspire/plugin.xml
@@ -26,6 +26,9 @@
             <property
                   maxOccurrence="1"
                   minOccurrence="1">
+               <propertyCondition
+                     class="eu.esdihumboldt.cst.functions.inspire.InspireIdentifierTarget">
+               </propertyCondition>
             </property>
          </targetProperties>
          <sourceProperties>
