--- a/cst/plugins/eu.esdihumboldt.cst.functions.inspire/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.inspire/plugin.xml
@@ -76,6 +76,9 @@
             <property
                   maxOccurrence="1"
                   minOccurrence="1">
+               <propertyCondition
+                     class="eu.esdihumboldt.cst.functions.inspire.GeographicalNameTarget">
+               </propertyCondition>
             </property>
          </targetProperties>
          <sourceProperties>
