added several function property conditions
refs #481

Change-Id: Ieab2d84236c7753a026abc95381a7aa3b5e14547

--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -103,6 +103,8 @@
                   description="The property a value shall be assigned to"
                   maxOccurrence="1"
                   minOccurrence="1">
+               <valueCondition
+                     allowAugmented="false" />
             </property>
          </targetProperties>
          <functionParameter
@@ -123,6 +125,9 @@
                   description="The source property to be mapped to a property in the target schema"
                   maxOccurrence="1"
                   minOccurrence="1">
+               <valueCondition
+                     allowAugmented="true">
+               </valueCondition>
             </property>
          </sourceProperties>
          <targetProperties>
@@ -130,6 +135,9 @@
                   description="The target property that corresponds to the source property"
                   maxOccurrence="1"
                   minOccurrence="1">
+               <valueCondition
+                     allowAugmented="true">
+               </valueCondition>
             </property>
          </targetProperties>
          <functionParameter
@@ -157,6 +165,11 @@
                   maxOccurrence="n"
                   minOccurrence="0"
                   name="var">
+               <bindingCondition
+                     allowCollection="false"
+                     allowConversion="true"
+                     compatibleClass="java.lang.String">
+               </bindingCondition>
             </property>
          </sourceProperties>
          <targetProperties>
@@ -164,6 +177,11 @@
                   description="The property is populated with the formatted string"
                   maxOccurrence="1"
                   minOccurrence="1">
+               <bindingCondition
+                     allowCollection="false"
+                     allowConversion="true"
+                     compatibleClass="java.lang.String">
+               </bindingCondition>
             </property>
          </targetProperties>
          <functionParameter
