--- a/cst/plugins/eu.esdihumboldt.cst.functions.inspire/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.inspire/plugin.xml
@@ -89,6 +89,11 @@
             <property
                   maxOccurrence="-1"
                   minOccurrence="1">
+               <bindingCondition
+                     allowCollection="false"
+                     allowConversion="true"
+                     compatibleClass="java.lang.String">
+               </bindingCondition>
             </property>
          </sourceProperties>
          <functionParameter
