updated help on transformation
refs #465

Change-Id: Ic4b96678b6cddaa9f70e2a2b358b93f53c0ed2b6

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -297,6 +297,7 @@
                mnemonic="T">
             <command
                   commandId="eu.esdihumboldt.hale.ui.transformation"
+                  label="Transform external data..."
                   style="push">
             </command>
             <command
