added description for assign parameter
Change-Id: I599bca5ed74c3b4a4011e15e78a2802c679398a9
Reviewed-on: http://gerrit.esdi-community.eu/1495
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -108,6 +108,7 @@
             </property>
          </targetProperties>
          <functionParameter
+               description="The value to be assigned."
                label="Value"
                maxOccurrence="1"
                minOccurrence="1"
