added GZip content type, content describer
...and provider base classes.

refs #421

Change-Id: I1f70169b69437fdf59259be1f1227806cb090330
Reviewed-on: http://gerrit.esdi-community.eu/1502
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/common/plugins/eu.esdihumboldt.hale.common.core/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.core/plugin.xml
@@ -33,6 +33,15 @@
             name="HALE project archive"
             priority="normal">
       </content-type>
+      <content-type
+            file-extensions="gz"
+            id="eu.esdihumboldt.hale.common.core.gzip"
+            name="GZiped file"
+            priority="normal">
+         <describer
+               class="eu.esdihumboldt.hale.common.core.io.util.GZipContentDescriber">
+         </describer>
+      </content-type>
    </extension>
    <extension
          point="eu.esdihumboldt.hale.io.provider">
